# aicomm

./: .env  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  _typos.toml  ai.rest  cliff.toml  test.rest
.github/workflows/: build.yml
chat/: Cargo.toml  README.md  deny.toml  test.rest
chat/.github/workflows/: build.yml
chat/ai_sdk/: Cargo.toml
chat/ai_sdk/examples/: ollama.rs  openai.rs
chat/ai_sdk/src/: lib.rs
chat/ai_sdk/src/adapters/: mod.rs  ollama.rs  openai.rs
chat/analytics-server/: Cargo.toml  analytics.yml  build.rs
chat/analytics-server/examples/: db.rs  sender.rs
chat/analytics-server/src/: config.rs  error.rs  events.rs  extractors.rs  handler.rs  handlers.rs  lib.rs  main.rs  openapi.rs
chat/analytics-server/src/pb/: analytics.rs  mod.rs
chat/analytics_server/src/: error.rs  events.rs  extractors.rs  handlers.rs  main.rs  openapi.rs
chat/bot-server/: Cargo.toml  bot.yml
chat/bot-server/src/: indexer.rs  lib.rs  notif.rs  server.rs
chat/bot_server/: Cargo.toml
chat/bot_server/src/: config.rs  indexer.rs
chat/chat_core/: Cargo.toml  build.rs
chat/chat_core/fixtures/: decoding.pem  encoding.pem
chat/chat_core/src/: lib.rs
chat/chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat/chat_core/src/pb/: mod.rs
chat/chat_core/src/utils/: jwt.rs  mod.rs
chat/chat_server/: Cargo.toml
chat/chat_server/fixtures/: test.sql
chat/chat_server/src/: agent.rs  config.rs  error.rs  lib.rs  openapi.rs
chat/chat_server/src/handlers/: agent.rs  auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat/chat_server/src/middlewares/: chat.rs  mod.rs
chat/chat_server/src/models/: agent.rs  chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat/chat_test/: Cargo.toml  chat.yml  notify.yml
chat/chat_test/tests/: chat.rs
chat/migrations/: 20240426045903_initial.sql  20240504032504_triggers.sql  20240925034708_agent.sql  20241002035527_agent_adapter.sql  20241013042509_user_bot.sql
chat/notify_server/: Cargo.toml  index.html
chat/notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
chat/simulator/: Cargo.toml
chat/simulator/src/: convert.rs  dummy.rs  lib.rs  main.rs
chatapp/: README.md  buf.gen.yaml  deny.toml  index.html  package.json  tailwind.config.js
chatapp/src/: App.vue  main.js  tailwind.css  utils.js
chatapp/src-tauri/: Cargo.toml  tauri.conf.json
chatapp/src-tauri/src/: config.rs  lib.rs  main.rs  utils.rs
chatapp/src-tauri/src/commands/: mod.rs
chatapp/src-tauri/src/fixtures/: config.default.yml
chatapp/src/analytics/: event.js
chatapp/src/components/: MessageList.vue  MessageSend.vue  Sidebar.vue
chatapp/src/router/: index.js
chatapp/src/store/: index.js
chatapp/src/views/: Chat.vue  Login.vue  Register.vue
e2e/: .gitignore  buf.gen.yaml  package-lock.json  package.json
e2e/tests/: chat.spec.ts
fixtures/: analytics.yml  bot.yml  chat.yml  notify.yml
protos/: clickhouse.sql  messages.proto
superset/: README.md  superset_config.py
swiftide-pgvector/: .gitignore  Cargo.toml  README.md
swiftide-pgvector/examples/: indexer.rs  retriever.rs
swiftide-pgvector/src/: lib.rs  persist.rs  retrieve.rs
