[workspace]
members = [
  "chat_server",
  "chat_core",
  "notify_server",
  "ai_sdk",
  "bot-server",
  "analytics-server",
  "chat_test", "simulator",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.89"
axum = { version = "0.7.7", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  "macros",
] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
chat-server = { path = "./chat_server" }
dashmap = "6.1.0"
jwt-simple = "0.12.10"
notify-server = { path = "./notify_server" }
reqwest = { version = "0.12.8", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
swiftide-pgvector = "0.1.1"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
  "compression-full",
  "cors",
  "fs",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v7", "serde"] }
