[package]
name = "analytics-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat-core = { workspace = true }
clickhouse = { version = "0.13.0", features = ["rustls-tls", "time"] }
prost = "0.13.3"
prost-types = "0.13.3"
serde = { workspace = true }
serde_yaml = "0.9.34"
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

[build-dependencies]
anyhow = { workspace = true }
prost-build = "0.13.3"
proto-builder-trait = { version = "0.6.2", features = [
    "prost",
], default-features = false }

[dev-dependencies]
clickhouse = { version = "0.13.0", features = [
    "rustls-tls",
    "time",
    "test-util",
] }
