[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
jwt-simple = { workspace = true }
prost = "0.13.3"
prost-types = "0.13.3"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
uuid = { workspace = true }


[build-dependencies]
anyhow = { workspace = true }
prost-build = "0.13.3"
proto-builder-trait = { version = "0.6.2", features = [
    "prost",
], default-features = false }
