[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
test-util = ["http-body-util", "sqlx-db-tester"]

[dependencies]
ai_sdk = { version = "0.1.0", path = "../ai_sdk" }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { workspace = true }
chat-core = { workspace = true }
chrono = { workspace = true }
hex = "0.4.3"
http-body-util = { version = "0.1.2", optional = true }
jwt-simple = { workspace = true }
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.128"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
sqlx-db-tester = { version = "0.5.0", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }


[dev-dependencies]
chat-server = { workspace = true, features = ["test-util"] }
