[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat-core = { workspace = true }
chat-server = { workspace = true, features = ["test-util"] }
notify-server = { workspace = true }
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls",
  "json",
  "multipart",
  "stream",
] }
reqwest-eventsource = "0.6.0"
serde = { workspace = true }
serde_json = "1.0.116"
tokio = { workspace = true }

[dependencies]
futures = "0.3.30"
